--- a/index.html
+++ b/index.html
@@ -540,6 +540,38 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<script src="js/waypoints.min.js"></script>
 			<script src="js/mail-script.js"></script>
 			<script src="js/main.js"></script>
-			<script id="load_ry_widget" src="https://staging.spotgini.com/embed?provider_id=eDNaTE05UzBrMlB6TXBRNTQrR1VoUT09LS14Nlp3TWN6bXEwRXJWUFh0VVovQVVnPT0=--e740796f796ba6df14b3fed3baae29cb92e9a1be" data-page="1" async defer></script>	
+			<script>
+			  var div = document.createElement('div');
+			  div.className = 'fb-customerchat';
+			  div.setAttribute('page_id', '1556832291051944');
+			  div.setAttribute('ref', '');
+			  document.body.appendChild(div);
+			  window.fbMessengerPlugins = window.fbMessengerPlugins || {
+			    init: function () {
+			      FB.init({
+				appId            : '1678638095724206',
+				autoLogAppEvents : true,
+				xfbml            : true,
+				version          : 'v3.3'
+			      });
+			    }, callable: []
+			  };
+			  window.fbAsyncInit = window.fbAsyncInit || function () {
+			    window.fbMessengerPlugins.callable.forEach(function (item) { item(); });
+			    window.fbMessengerPlugins.init();
+			  };
+			  setTimeout(function () {
+			    (function (d, s, id) {
+			      var js, fjs = d.getElementsByTagName(s)[0];
+			      if (d.getElementById(id)) { return; }
+			      js = d.createElement(s);
+			      js.id = id;
+			      js.src = "//connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
+			      fjs.parentNode.insertBefore(js, fjs);
+			    }(document, 'script', 'facebook-jssdk'));
+			  }, 0);
+			</script>			
+<!-- 			<script id="load_ry_widget" src="https://staging.spotgini.com/embed?provider_id=eDNaTE05UzBrMlB6TXBRNTQrR1VoUT09LS14Nlp3TWN6bXEwRXJWUFh0VVovQVVnPT0=--e740796f796ba6df14b3fed3baae29cb92e9a1be" data-page="1" async defer></script>	 -->
+
 		</body>
 	</html>
