Changes to landing text.

--- a/index.html
+++ b/index.html
@@ -83,10 +83,13 @@
 						<div class="banner-content col-lg-12 col-md-12">
 							<h6 class="text-uppercase">Don’t look further, here is the key</h6>
 							<h1>
-								We’re Industrial solution
+								DELFI Cognitive E & P Platform.
 							</h1>
 							<p class="text-white">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et <br> dolore magna aliqua. Ut enim ad minim.  sed do eiusmod tempor incididunt.
+								The DELFI cognitive E&P environment is a collaborative technology that unites the E&P life cycle in the cloud.<br>
+								It’s open, secure, scalable, and fully managed, seamlessly connecting people, data and leading software <br>
+								applications across exploration, development, drilling, production and midstream—all delivered through a <br>
+								flexible and personalized SaaS subscription model.  
 							</p>
 							<a href="#" class="primary-btn header-btn text-uppercase">Get Started</a>
 						</div>
